# hack-ai-prompt-buddies

./: .env  .gitignore  404.html  Makefile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.py
commands/: index.html
data/: transactions.csv
docs/: mkdocs.yml
docs/docs/: commands.md  getting-started.md  index.md
docs/docs/src/: mBank_chat_handler.md  prompt_generation.md  utils.md
getting-started/: index.html
search/: search_index.json
src/: app.py  call_together_api.py  chat_history.py  config.py  main.py  utils.py
src/mBank_chat_handler/: index.html
src/prompt_genaration/: examples.json  prompt_generator.py  system_prompt_generator.py  system_prompts.json  tools.py  tools_definition.py
src/prompt_generation/: index.html
src/utils/: index.html  logging_utils.py  ui_utils.py
src/wolf_selector/: wolf_selector.py
tests/: test_chat_history.py
tests/prompt_generation/: test_prompt_generator.py  test_system_prompt_generator.py  test_tools.py
tests/utils/: test_logging_utils.py
tests/wolf_selector/: test_wolf_selector.py
