[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack-ai-prompt-buddies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter-data-science>=2.2.0",
    "dotenv>=0.9.9",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "setuptools>=80.7.1",
    "together>=1.5.8",
]
