[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack-ai-prompt-buddies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter-data-science>=2.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "setuptools>=80.7.1",
    "streamlit>=1.45.1",
    "together>=1.5.8",
]

[flake8]
max-line-length = 100
